Remove fixed height from Google+ wrapper to prevent overlapping

--- a/css/main.css
+++ b/css/main.css
@@ -139,5 +139,4 @@ nav a:focus {
 .g-wrapper {
     display: inline-block;
     vertical-align: top;
-    height: 260px;
 }
